tests/compile_fail/no_handler_attribute.stderr
error[E0277]: the trait bound `MyActor: yaaf::handler::detail::HandlesList<()>` is not satisfied
 --> $DIR/no_handler_attribute.rs:6:10
  |
6 | #[derive(Actor)]
  |          ^^^^^ the trait `yaaf::handler::detail::HandlesList<()>` is not implemented for `MyActor`
  |
 ::: $WORKSPACE/src/actor.rs
  |
  | pub trait Actor: HandlesList<<Self as Actor>::Handles> {
  |                  ------------------------------------- required by this bound in `yaaf::Actor`
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
